--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+        <uses-feature android:name="android.hardware.camera"
+            android:required="true" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
