--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.heman.noteapp" >
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,9 +11,12 @@
         android:theme="@style/AppTheme" >
         <uses-feature android:name="android.hardware.camera"
             android:required="true" />
+        <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
+            android:label="Note App"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
