--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.heman.noteapp" >
 
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +12,9 @@
         android:theme="@style/AppTheme" >
         <uses-feature android:name="android.hardware.camera"
             android:required="true" />
-        <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name = "android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
         <activity
             android:name=".MainActivity"
